--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <meta charset="utf-8">
 
-<title>purple</title>  
+<title>purple heart of the sun</title>  
 
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="purple">
 <meta name="color-scheme" content="dark">
-<meta name="description" content="purple my hair">
+<meta name="description" content="trident cazimi hair">
   
 <style media=(color)>
   html { color: mistyrose; background: purple; }
